--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@
     .footer-logo-col p {
         margin-top: 10px;
         font-size: 0.8rem;
-        color: #00BCD4;
+        color: #00ccff;
     }
     .footer-logo-section img {
         max-width: 150px;
@@ -1008,6 +1008,7 @@
 </body>
 
 </html>
+
 
 
 
