--- a/index.html
+++ b/index.html
@@ -731,7 +731,7 @@
         
         <nav class="navbar">
             <a href="/tezex/" class="logo-link">
-                <img src="images/logo.png" alt="Tezex Logo" class="logo-img"/>
+                <img src="/tezex/images/logo.png" alt="Tezex Logo" class="logo-img"/>
             </a>
             <div class="menu-toggle" id="menu-toggle">
                 <i class="fas fa-bars"></i> 
@@ -908,7 +908,7 @@
             <div class="footer-logo-col">
                 <div class="footer-logo-section">
                     <a href="/tezex/" class="logo-link">
-                    <img src="images/logo.png" alt="Tezex Logo" />
+                    <img src="/tezex/images/logo.png" alt="Tezex Logo" />
                 </div>
                 <p>YOU CAN RELY ON US FOR QUALITY WORK</p>
             </div>
@@ -1008,6 +1008,7 @@
 </body>
 
 </html>
+
 
 
 
